--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
         completions."
     </string>
     <string name="title_activity_welcome">WelcomeActivity</string>
+    <string name="title_activity_register">Register</string>
 </resources>
