--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,18 +3,25 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
 
-    <!-- Strings related to login -->
+    <!-- Strings related to login/register -->
     <string name="prompt_email">Email</string>
+    <string name="prompt_name">Name</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_conf_password">Confirm Password</string>
+    <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This user is invalid</string>
     <string name="error_invalid_password">This user/password may be invalid</string>
     <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_unmatched_passwords">These passwords don\'t match</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="acc_type">Account Type</string>
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="title_activity_register">Register</string>
+
+    <string-array name="acctypes_array">
+        <item>User</item>
+        <item>Location Employee</item>
+        <item>Admin</item>
+    </string-array>
 </resources>
