UI BABYYY! added colors, drawables, and added basic ui to login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
-    <string name="app_name">DonationTracker</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
+
+    <string name="app_name">SUIVI</string>
+
+    <string name="create_account">CREATE ACCOUNT</string>
+    <string name="already_user">Already a user?</string>
+    <string name="login_button">LOG IN</string>
+
+    <string name="welcome">Welcome</string>
+    <string name="welcome_text">Sign up for free music on your phone, tablet, and computer.</string>
 
     <!-- Strings related to login/register -->
     <string name="prompt_email">Email</string>
