--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This user is invalid</string>
     <string name="error_invalid_password">This user/password may be invalid</string>
+    <string name="error_password_short">Password must be longer than 4 characters</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_unmatched_passwords">These passwords don\'t match</string>
     <string name="error_field_required">This field is required</string>
