--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="prompt_conf_password">Confirm Password</string>
     <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This user is invalid</string>
+    <string name="error_invalid_email">This email does not contain @</string>
     <string name="error_invalid_password">This user/password may be invalid</string>
     <string name="error_password_short">Password must be longer than 4 characters</string>
     <string name="error_incorrect_password">This password is incorrect</string>
