--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="title_activity_location">LocationActivity</string>
     <string name="tab_text_1">Home</string>
     <string name="tab_text_2">Donations</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="tab_text_3">Other</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
     <!-- TODO: Remove or change this placeholder text -->
