Donations added and persisted"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
         <item>Household Items</item>
         <item>Games</item>
         <item>Clothing</item>
+        <item>Other</item>
     </string-array>
     <string name="title_activity_add_donation">Enter Donation Details</string>
     <string name="title_activity_location">LocationActivity</string>
