--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,8 +52,11 @@
     <string name="title_activity_location">LocationActivity</string>
     <string name="tab_text_1">Home</string>
     <string name="tab_text_2">Donations</string>
-    <string name="tab_text_3">Other</string>
+    <string name="tab_text_3">Search</string>
     <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
