Added search functionality for all donations across all locations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_all_donations">AllDonations</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
